HOTFIX: Fix alignment of navabr items

--- a/src/assets/css/global/base/global-styles.css
+++ b/src/assets/css/global/base/global-styles.css
@@ -76,7 +76,7 @@ svg {
 }
 
 .icon {
-  vertical-align: baseline;
+  vertical-align: var(--icon-vertical-align, baseline);
   width: var(--icon-width, 1em);
   height: var(--icon-height, 1em);
 }
